<resources>
    <string name="app_name">Calculatorchik</string>
    <string name="second_number">Second number</string>
    <string name="first_number">First Number</string>
    <string name="plus">+</string>
    <string name="minus">–</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="equally">=</string>
    <string name="ответ">Ответ</string>
    <string name="result">result</string>
</resources>
